--- a/explorer-ui/public/index.html
+++ b/explorer-ui/public/index.html
@@ -25,6 +25,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Epirus Substrate Explorer</title>
+    <!--
+      Fonts
+    -->
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@100;200;300;400;500;600;700&family=Inter:wght@100;200;300;400;500;600;700;800&display=swap"
+          rel="stylesheet" />
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
