--- a/explorer-ui/public/index.html
+++ b/explorer-ui/public/index.html
@@ -11,7 +11,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Epirus Substrate Explorer App"
+      content="Sirato Substrate Blockchain Explorer"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Epirus Substrate Explorer</title>
+    <title>Sirato Substrate Explorer</title>
     <!--
       Fonts
     -->
